--- a/login.css
+++ b/login.css
@@ -1,21 +1,19 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    min-height: 100vh;
     background-color: #f0f0f0;
   }
   
   .login-container {
     background-color: #fff;
     border-radius: 8px;
+    text-align: center;
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 300px;
-    text-align: center;
+    align-self: center;
+    margin: auto;
+    margin-top: 10%;
   }
   
   h2 {
