--- a/style.css
+++ b/style.css
@@ -158,3 +158,37 @@ body {
     transition: 0.5s;
 }
 
+label {
+    display: block;
+    margin-bottom: 5px;
+    text-align: left;
+}
+  
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+  
+.submit{
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.formulario_creacion {
+    background-color: #fff;
+    border-radius: 8px;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    align-self: center;
+    margin: auto;
+    margin-top: 10%;
+}
